--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY ./package*.json ./
 RUN apt update
 RUN apt-get install npm --yes
+RUN npm install
 COPY . .
 EXPOSE 8080
 CMD ["node", "server.js"]
-
