--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,20 +13,26 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  CD:
+  # This workflow contains a single job called "build"
+  CI:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
       
-      - name: Definindo o Kube config
-        uses: Azure/k8s-set-context@v2
+      - name: Autenticando o usuário no Docker
+        uses: docker/login-action@v2.0.0
         with:
-          method: kubeconfig
-          kubeconfig: ${{secrets.K8S_CONFIG}}
-        
-      - name: Efetuando o deploy no ambiente de teste
-        uses: Azure/k8s-deploy@v4
+          username: ${{secrets.DOCKERHUB_USER}}
+          password: ${{secrets.DOCKERHUB_PWD}}
+          
+      - name: Construindo a imagem e enviando para o Docker Hub
+        uses: docker/build-push-action@v3.0.0
         with:
-          images: aqualung22/kube-news:v1
-          manifests: |
-            k8s/deployment.yaml
+          file: ./src/Dockerfile
+          context: ./src
+          push: true
+          tags: | 
+            aqualung22/kube-news:latest
+            aqualung22/kube-news:${{github.run_number}}
