--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,22 @@ jobs:
           tags: | 
             aqualung22/kube-news:latest
             aqualung22/kube-news:${{github.run_number}}
+
+  CD:
+    runs-on: ubuntu-latest
+    needs: [CI]
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Definindo o Kube config
+        uses: Azure/k8s-set-context@v2
+        with:
+          method: kubeconfig
+          kubeconfig: ${{secrets.K8S_CONFIG}}
+        
+      - name: Efetuando o deploy no ambiente de teste
+        uses: Azure/k8s-deploy@v3.1
+        with:
+          images: aqualung22/kube-news:${{github.run_number}}
+          manifests: |
+            k8s/deployment.yaml
